Mon Sep 24 18:01:56 UTC 2007 / Arjen de Korte <arjen@de-korte.org>

 - conf/upsmon.conf.sample: List the default values for NOTIFYMSG
   and NOTIFYFLAG. [Alioth Feature Requests #302016]

Sun Sep 23 18:34:20 UTC 2007 / Arjen de Korte <arjen@de-korte.org>

 - drivers/cps-hid.c: Add server side variables.
 - scripts/subdriver/path-to-subdriver.sh: Add server side variables,
   sort the HID paths alphabetically and remove duplicates.

Sat Sep 22 19:22:56 UTC 2007 / Arjen de Korte <arjen@de-korte.org>

 - drivers/cps-hid.[ch]: Created a new subdriver for CyberPower HID
   UPS systems.
 - drivers/Makefile.am,usbhid-ups.c: Added new CyberPower subdriver.
 - drivers/apc-hid.c: Removed CyberPower from this subdriver.
 - scripts/subdriver/path-to-subdriver.sh: Some minor corrections to
   make the output compliant to what we expect.

Sat Sep 22 17:59:56 UTC 2007 / Arjen de Korte <arjen@de-korte.org>

 - drivers/megatec_usb.c: Packetizing is already done by the libusb
   library, so we don't need to duplicate that.

Sat Sep 22 07:14:39 UTC 2007 / Alexander I. Gordeev <lasaine@lvk.cs.msu.su>

 * drivers/megatec_usb.c: merged Arjen de Korte's changes in krauler
   subdriver with slight modifications:
   - commands are now stored in a table, making it simplier to process
     them
   - switched to libusb.c API completely

Mon Sep 17 19:09:47 UTC 2007 / Arjen de Korte <arjen@de-korte.org>

 - data/cmdvartab, docs/new-names.txt: Removed "shutdown.restart".
 * drivers/usbhid-ups.c:
   - Corrected shutdown function (should fallback to 'shutdown.reboot',
     not 'shutdown.return').
   - Renamed 'shutdown.restart' to 'shutdown.return', which almost has
     the same meaning, with the exception that it doesn't shutdown the
     UPS.
 * drivers/<usbhid-ups subdrivers>:
   - Implemented the above.

Mon Sep 17 11:33:17 UTC 2007 / Arjen de Korte <arjen@de-korte.org>

 - clients/upscmd.c: Allow passing an additional parameter in a command.